# satnogs-client-config

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yml  .yapfignore  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
contrib/: refresh-requirements.sh
docs/: conf.py  devguide.rst  index.rst  modules.rst  requirements.txt  setup.cfg  userguide.rst
satnogsconfig/: __init__.py  __main__.py  _version.py  config.py  menu.py  menu.yml  settings.py
satnogsconfig/helpers/: __init__.py  ansible.py  apt.py  grsatnogs.py  satnogssetup.py  support.py
