[metadata]
name = satnogs-config
url = https://gitlab.com/librespacefoundation/satnogs/satnogs-config
author = SatNOGS project
author_email = dev@satnogs.org
license = GPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Topic :: Communications :: Ham Radio
description = SatNOGS configuration utility

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    pythondialog~=3.5.0
    PyYAML~=5.3.0
    setuptools~=50.3.0
    python-dotenv~=0.14.0
    psutil==5.5.1

[options.entry_points]
console_scripts =
    satnogs-config = satnogsconfig:main

[flake8]
exclude = satnogsconfig/_version.py,versioneer.py,docs,build,.tox

[yapf]
dedent_closing_brackets = True
allow_split_before_dict_value = False
indent_dictionary_value = True

[tool:isort]
skip_glob = docs,build,.tox
skip = _version.py,versioneer.py
multi_line_output = 2

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = satnogsconfig/_version.py
versionfile_build = satnogsconfig/_version.py
tag_prefix =
parentdir_prefix =
